--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "express": "^4.18.2",
     "fuse.js": "^3.6.1",
     "googleapis": "^110.0.0",
+    "https": "^1.0.0",
     "latinize": "^0.5.0",
     "mime": "^3.0.0",
     "mime-types": "^2.1.35",
