--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "run-script-os": "^1.1.6",
     "rxjs": "~7.5.0",
     "spark-md5": "^3.0.1",
+    "talk2svelte": "latest",
     "tslib": "^2.0.1",
     "tus-js-client": "^2.3.1",
     "types-checker": "^0.0.10",
