--- a/apps/contributor/src/environments_config/production/app-config.json
+++ b/apps/contributor/src/environments_config/production/app-config.json
@@ -2,14 +2,14 @@
   "version": "STF_DOCKER_CONFIG_VERSION",
   "production": true,
   "backend": {
-    "app": "STF_DOCKER_CONFIG_APP_NAME",
+    "app": "contributor",
     "apiPath": "/api",
-    "siteKey": "STF_DOCKER_CONFIG_SITE_KEY",
-    "sentry_environment": "STF_DOCKER_CONFIG_SENTRY_ENV",
-    "sentry_url": "STF_DOCKER_CONFIG_SENTRY_URL",
+    "siteKey": "",
+    "sentry_environment": "prod",
+    "sentry_url": "https://76bfd6392db6450a8f3174877b9bac9d@o393980.ingest.sentry.io/5425081",
     "sentry_backend": "https://nuclia.cloud/api",
-    "posthog_host": "STF_DOCKER_CONFIG_POSTHOG_HOST",
-    "posthog_key": "STF_DOCKER_CONFIG_POSTHOG_KEY",
-    "saml_login": STF_DOCKER_CONFIG_SAML_ENABLED
+    "posthog_host": "https://track.nuclia.cloud",
+    "posthog_key": "phc_cdrUDTLT62r0EXEZzZvhkSCkksGttBiWkBWoPpxbomA",
+    "saml_login": false
   }
 }
