nx migrate --run-migrations

--- a/apps/sistema-demo/tsconfig.app.json
+++ b/apps/sistema-demo/tsconfig.app.json
@@ -3,8 +3,9 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "types": [],
-    "target": "es2020",
-    "resolveJsonModule": true
+    "target": "ES2022",
+    "resolveJsonModule": true,
+    "useDefineForClassFields": false
   },
   "files": ["src/main.ts", "src/polyfills.ts"],
   "include": ["src/**/*.d.ts"],
