--- a/package.json
+++ b/package.json
@@ -80,11 +80,13 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "15.2.4",
+    "@angular-devkit/core": "15.2.4",
+    "@angular-devkit/schematics": "15.2.4",
     "@angular-eslint/eslint-plugin": "15.0.0",
     "@angular-eslint/eslint-plugin-template": "15.0.0",
     "@angular-eslint/schematics": "^15.2.1",
     "@angular-eslint/template-parser": "15.0.0",
-    "@angular/cli": "15.2.4",
+    "@angular/cli": "~15.2.0",
     "@angular/compiler-cli": "15.2.5",
     "@angular/language-service": "15.2.5",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
