Fixes from code analysis

--- a/apps/dashboard/project.json
+++ b/apps/dashboard/project.json
@@ -133,9 +133,9 @@
               "output": "assets"
             }
           ]
-        },
-        "defaultConfiguration": "production"
+        }
       },
+      "defaultConfiguration": "production",
       "outputs": ["{options.outputPath}"]
     },
     "serve": {
