--- a/apps/manager/project.json
+++ b/apps/manager/project.json
@@ -125,9 +125,9 @@
               "output": "assets/deployment"
             }
           ]
-        },
-        "defaultConfiguration": "production"
+        }
       },
+      "defaultConfiguration": "production",
       "outputs": ["{options.outputPath}"]
     },
     "serve": {
