--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "@testing-library/svelte": "^3.0.3",
     "@tsconfig/svelte": "^2.0.1",
     "@types/core-js": "^2.5.4",
+    "@types/cors": "^2.8.13",
     "@types/d3": "^6.7.0",
     "@types/express": "^4.17.17",
     "@types/gapi": "^0.0.42",
