--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@ng-web-apis/common": "^2.1.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
-    "@nxext/vite": "^14.0.3",
+    "@nxext/vite": "15.1.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@sentry/angular": "^7.2.0",
     "@sentry/tracing": "^7.2.0",
@@ -98,7 +98,7 @@
     "@nrwl/linter": "15.9.2",
     "@nrwl/node": "15.9.2",
     "@nrwl/workspace": "15.9.2",
-    "@nxext/svelte": "^14.0.2",
+    "@nxext/svelte": "15.7.0",
     "@rollup/plugin-inject": "^4.0.4",
     "@rollup/plugin-terser": "^0.3.0",
     "@rollup/plugin-typescript": "^8.3.0",
@@ -144,9 +144,8 @@
     "jest-preset-angular": "13.0.0",
     "ng-mocks": "^14.6.0",
     "ng-packagr": "15.2.2",
-    "ngx-build-plus": "11.0.0",
     "nx": "15.9.2",
-    "nx-electron": "^13.0.0",
+    "nx-electron": "15.0.0-alpha.0",
     "postcss": "^8.4.16",
     "postcss-import": "15.0.0",
     "postcss-preset-env": "7.8.0",
