Fix prediction build

--- a/libs/prediction/tsconfig.json
+++ b/libs/prediction/tsconfig.json
@@ -11,6 +11,7 @@
     }
   ],
   "compilerOptions": {
+    "target": "es2020",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitReturns": true,
