--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,10 +10,10 @@
     "esModuleInterop": true,
     "importHelpers": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es2015",
+    "target": "es2022",
     "module": "esnext",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2017", "dom", "esnext.asynciterable"],
+    "lib": ["es2020", "dom", "esnext.asynciterable", "esnext.bigint"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
