--- a/package.json
+++ b/package.json
@@ -136,7 +136,7 @@
     "@typescript-eslint/parser": "5.57.0",
     "ajv-formats": "^2.1.1",
     "codelyzer": "6.0.2",
-    "concurrently": "^7.6.0",
+    "concurrently": "^8.0.1",
     "crypto-browserify": "^3.12.0",
     "dotenv": "10.0.0",
     "electron": "^18.3.7",
@@ -154,6 +154,7 @@
     "jest-preset-angular": "13.0.0",
     "ng-mocks": "^14.6.0",
     "ng-packagr": "15.2.2",
+    "nodemon": "^2.0.22",
     "nx": "15.9.2",
     "nx-electron": "15.0.0-alpha.0",
     "postcss": "^8.4.16",
