Update angular to latest patch version

--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "15.2.5",
-    "@angular/cdk": "15.2.5",
+    "@angular/cdk": "^15.2.6",
     "@angular/common": "15.2.5",
     "@angular/compiler": "15.2.5",
-    "@angular/core": "15.2.5",
+    "@angular/core": "^15.2.6",
     "@angular/flex-layout": "15.0.0-beta.42",
     "@angular/forms": "15.2.5",
     "@angular/material": "15.2.5",
@@ -85,7 +85,7 @@
     "@angular-eslint/eslint-plugin-template": "15.0.0",
     "@angular-eslint/schematics": "^15.2.1",
     "@angular-eslint/template-parser": "15.0.0",
-    "@angular/cli": "~15.2.0",
+    "@angular/cli": "^15.2.5",
     "@angular/compiler-cli": "15.2.5",
     "@angular/language-service": "15.2.5",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
