--- a/apps/manager-v2/project.json
+++ b/apps/manager-v2/project.json
@@ -2,7 +2,13 @@
   "name": "manager-v2",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "nuclia",
+  "generators": {
+    "@nrwl/angular:component": {
+      "style": "scss",
+      "changeDetection": "OnPush"
+    }
+  },
+  "prefix": "nma",
   "sourceRoot": "apps/manager-v2/src",
   "tags": [],
   "targets": {
@@ -15,8 +21,35 @@
         "main": "apps/manager-v2/src/main.ts",
         "polyfills": ["zone.js"],
         "tsConfig": "apps/manager-v2/tsconfig.app.json",
-        "assets": ["apps/manager-v2/src/favicon.ico", "apps/manager-v2/src/assets"],
+        "allowedCommonJsDependencies": [],
+        "assets": [
+          "apps/manager-v2/src/favicon.ico",
+          "apps/manager-v2/src/assets",
+          {
+            "glob": "**/*",
+            "input": "libs/pastanaga/src/assets",
+            "output": "assets"
+          },
+          {
+            "glob": "**/*",
+            "input": "libs/common/src/assets/i18n",
+            "output": "assets/i18n"
+          },
+          {
+            "glob": "**/*",
+            "input": "apps/manager-v2/src/environments_config/local-stage",
+            "output": "assets/deployment"
+          },
+          {
+            "glob": "**/*",
+            "input": "libs/sistema/assets",
+            "output": "assets"
+          }
+        ],
         "styles": ["apps/manager-v2/src/styles.scss"],
+        "stylePreprocessorOptions": {
+          "includePaths": ["apps/manager-v2/src"]
+        },
         "scripts": []
       },
       "configurations": {
@@ -33,15 +66,69 @@
               "maximumError": "4kb"
             }
           ],
-          "outputHashing": "all"
+          "fileReplacements": [
+            {
+              "replace": "apps/manager-v2/src/environments/environment.ts",
+              "with": "apps/manager-v2/src/environments/environment.prod.ts"
+            }
+          ],
+          "outputHashing": "all",
+          "assets": [
+            "apps/manager-v2/src/favicon.ico",
+            "apps/manager-v2/src/assets",
+            {
+              "glob": "**/*",
+              "input": "libs/pastanaga/src/assets",
+              "output": "assets"
+            },
+            {
+              "glob": "**/*",
+              "input": "libs/common/src/assets/i18n",
+              "output": "assets/i18n"
+            },
+            {
+              "glob": "**/*",
+              "input": "apps/manager-v2/src/environments_config/local-stage",
+              "output": "assets/deployment"
+            },
+            {
+              "glob": "**/*",
+              "input": "libs/sistema/assets",
+              "output": "assets"
+            }
+          ]
         },
-        "development": {
+        "local-stage": {
           "buildOptimizer": false,
           "optimization": false,
           "vendorChunk": true,
           "extractLicenses": false,
           "sourceMap": true,
-          "namedChunks": true
+          "namedChunks": true,
+          "assets": [
+            "apps/manager-v2/src/favicon.ico",
+            "apps/manager-v2/src/assets",
+            {
+              "glob": "**/*",
+              "input": "libs/pastanaga/src/assets",
+              "output": "assets"
+            },
+            {
+              "glob": "**/*",
+              "input": "libs/common/src/assets/i18n",
+              "output": "assets/i18n"
+            },
+            {
+              "glob": "**/*",
+              "input": "apps/manager-v2/src/environments_config/local-stage",
+              "output": "assets/deployment"
+            },
+            {
+              "glob": "**/*",
+              "input": "libs/sistema/assets",
+              "output": "assets"
+            }
+          ]
         }
       },
       "defaultConfiguration": "production"
@@ -52,8 +139,8 @@
         "production": {
           "browserTarget": "manager-v2:build:production"
         },
-        "development": {
-          "browserTarget": "manager-v2:build:development"
+        "local-stage": {
+          "browserTarget": "manager-v2:build:local-stage"
         }
       },
       "defaultConfiguration": "development"
