--- a/apps/desktop/electron/tsconfig.server.json
+++ b/apps/desktop/electron/tsconfig.server.json
@@ -4,7 +4,10 @@
     "target": "es2016",
     "module": "commonjs",
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "paths": {
+      "@nuclia/core": ["../../../libs/sdk-core/src/index.ts"]
+    }
   },
   "include": ["src/service/*.ts"]
 }
