--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuclia",
-  "version": "1.2.4",
+  "version": "2.0.0",
   "license": "MIT",
   "author": "Nuclia.cloud",
   "description": "Nuclia frontend apps and libs",
@@ -20,6 +20,7 @@
     "sdk-build:default": "rimraf ./dist/sdk-core && cd ./libs/sdk-core && rollup -c && cd ../..",
     "postsdk-build:default": "yarn sdk-build-node",
     "sdk-build-node": "rimraf ./dist/sdk-core-node && cd ./libs/sdk-core/node && rollup -c && cd ../..",
+    "desktop-server-dev": "concurrently \"cd apps/desktop/electron && npx tsc -p ./tsconfig.server.json --watch\" \"nodemon -q dist/service/apps/desktop/electron/src/service/server.js\"",
     "postinstall": "ngcc --properties es2020 browser module main"
   },
   "private": true,
@@ -49,20 +50,26 @@
     "@sveltejs/package": "^2.0.2",
     "algoliasearch": "^4.13.1",
     "angular-svg-icon": "^15.0.0",
+    "body-parser": "^1.20.2",
     "child_process": "^1.0.2",
     "core-js": "^3.6.4",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "d3": "^6.7.0",
     "date-fns": "^2.29.3",
     "electron-updater": "^5.0.1",
+    "express": "^4.18.2",
     "fuse.js": "^3.6.1",
     "googleapis": "^110.0.0",
+    "https": "^1.0.0",
+    "isomorphic-unfetch": "^4.0.2",
     "latinize": "^0.5.0",
+    "localstorage-polyfill": "^1.0.1",
     "mime": "^3.0.0",
     "mime-types": "^2.1.35",
     "mrs-developer": "^1.7.1",
     "ngx-captcha": "^12.0.2",
-    "node-machine-id": "^1.1.12",
+    "node-fetch": "^3.3.1",
     "perfect-scrollbar": "^1.5.0",
     "posthog-js": "^1.17.9",
     "prettier-plugin-svelte": "2.9.0",
@@ -106,7 +113,9 @@
     "@testing-library/svelte": "^3.0.3",
     "@tsconfig/svelte": "^2.0.1",
     "@types/core-js": "^2.5.4",
+    "@types/cors": "^2.8.13",
     "@types/d3": "^6.7.0",
+    "@types/express": "^4.17.17",
     "@types/gapi": "^0.0.42",
     "@types/gapi.auth2": "^0.0.56",
     "@types/gapi.client.drive": "^3.0.13",
@@ -126,9 +135,10 @@
     "@typescript-eslint/parser": "5.57.0",
     "ajv-formats": "^2.1.1",
     "codelyzer": "6.0.2",
+    "concurrently": "^8.0.1",
     "crypto-browserify": "^3.12.0",
     "dotenv": "10.0.0",
-    "electron": "^18.3.7",
+    "electron": "^24.0.0",
     "electron-builder": "23.6.0",
     "electron-notarize": "^1.2.1",
     "es-dirname": "^0.1.0",
@@ -143,6 +153,7 @@
     "jest-preset-angular": "13.0.0",
     "ng-mocks": "^14.6.0",
     "ng-packagr": "15.2.2",
+    "nodemon": "^2.0.22",
     "nx": "15.9.2",
     "nx-electron": "15.0.0-alpha.0",
     "postcss": "^8.4.16",
