--- a/charts/app/templates/app.deploy.yaml
+++ b/charts/app/templates/app.deploy.yaml
@@ -48,6 +48,15 @@ spec:
           httpGet:
             path: /
             port: {{ .Values.service.internalPort }}
+          initialDelaySeconds: 2
+          timeoutSeconds: 10
+          periodSeconds: 10
+        lifecycle:
+          preStop:
+            exec:
+              # in order to avoid latent load balancer routing/update issues, arbitrarily throw
+              # some delay in the shutdown process
+              command: ["sleep", "15"]
         ports:
         - name: "http-{{ .Release.Name }}"
           containerPort: {{ .Values.service.internalPort }}
