--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "algoliasearch": "^4.13.1",
     "angular-svg-icon": "^15.0.0",
     "body-parser": "^1.20.2",
+    "cheerio": "^1.0.0-rc.12",
     "child_process": "^1.0.2",
     "core-js": "^3.6.4",
     "cors": "^2.8.5",
