--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuclia",
-  "version": "2.2.2",
+  "version": "2.2.3",
   "license": "MIT",
   "author": "Nuclia.cloud",
   "description": "Nuclia frontend apps and libs",
@@ -48,6 +48,7 @@
     "@sveltejs/package": "^2.0.2",
     "algoliasearch": "^4.13.1",
     "angular-svg-icon": "^15.0.0",
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
     "child_process": "^1.0.2",
