--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "mrs-developer": "^1.7.1",
     "ngx-captcha": "^12.0.2",
     "node-fetch": "^3.3.1",
+    "papaparse": "^5.4.1",
     "perfect-scrollbar": "^1.5.0",
     "posthog-js": "^1.57.2",
     "prettier-plugin-svelte": "2.9.0",
@@ -126,6 +127,7 @@
     "@types/lru-cache": "^5.1.0",
     "@types/mime-types": "^2.1.1",
     "@types/node": "18.7.1",
+    "@types/papaparse": "^5.3.7",
     "@types/perfect-scrollbar": "^1.3.0",
     "@types/spark-md5": "^3.0.2",
     "@types/uuid": "^8.3.0",
