--- a/apps/dashboard/src/environments_config/production/app-config.json
+++ b/apps/dashboard/src/environments_config/production/app-config.json
@@ -9,11 +9,6 @@
     "sentry_url": "STF_DOCKER_CONFIG_SENTRY_URL",
     "sentry_backend": "https://nuclia.cloud/api",
     "posthog_host": "STF_DOCKER_CONFIG_POSTHOG_HOST",
-    "posthog_key": "STF_DOCKER_CONFIG_POSTHOG_KEY",
-    "saml_login": STF_DOCKER_CONFIG_SAML_ENABLED
-  },
-  "stashify": {
-    "editor": "STF_DOCKER_CONFIG_EDITOR_URL",
-    "email_domain": "STF_DOCKER_CONFIG_EMAIL_DOMAIN"
+    "posthog_key": "STF_DOCKER_CONFIG_POSTHOG_KEY"
   }
 }
