--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "spark-md5": "^3.0.1",
     "talk2svelte": "0.1.1",
     "tslib": "^2.3.0",
+    "turndown": "^7.1.2",
     "tus-js-client": "^2.3.1",
     "uuid": "^7.0.3",
     "z-schema": "^4.2.2",
@@ -130,6 +131,7 @@
     "@types/papaparse": "^5.3.7",
     "@types/perfect-scrollbar": "^1.3.0",
     "@types/spark-md5": "^3.0.2",
+    "@types/turndown": "^5.0.1",
     "@types/uuid": "^8.3.0",
     "@types/z-schema": "^3.24.0",
     "@types/zone.js": "^0.5.12",
