--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@angular/platform-browser-dynamic": "15.2.5",
     "@angular/router": "15.2.5",
     "@angular/service-worker": "15.2.5",
-    "@aws-sdk/client-s3": "^3.190.0",
+    "@aws-sdk/client-s3": "^3.348.0",
     "@aws-sdk/s3-request-presigner": "^3.190.0",
     "@ng-web-apis/common": "^2.1.0",
     "@ngx-translate/core": "^14.0.0",
@@ -80,6 +80,7 @@
     "spark-md5": "^3.0.1",
     "talk2svelte": "0.1.1",
     "tslib": "^2.3.0",
+    "turndown": "^7.1.2",
     "tus-js-client": "^2.3.1",
     "uuid": "^7.0.3",
     "z-schema": "^4.2.2",
@@ -130,6 +131,7 @@
     "@types/papaparse": "^5.3.7",
     "@types/perfect-scrollbar": "^1.3.0",
     "@types/spark-md5": "^3.0.2",
+    "@types/turndown": "^5.0.1",
     "@types/uuid": "^8.3.0",
     "@types/z-schema": "^3.24.0",
     "@types/zone.js": "^0.5.12",
@@ -177,7 +179,7 @@
     "ts-node": "10.9.1",
     "tslint": "6.1.3",
     "typescript": "~4.9.5",
-    "vite": "4"
+    "vite": "4.3.9"
   },
   "packageManager": "yarn@3.3.1"
 }
