--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -12,8 +12,15 @@
     "allowSyntheticDefaultImports": true,
     "target": "es2022",
     "module": "esnext",
-    "typeRoots": ["node_modules/@types"],
-    "lib": ["es2020", "dom", "esnext.asynciterable", "esnext.bigint"],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2020",
+      "dom",
+      "esnext.asynciterable",
+      "esnext.bigint"
+    ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
@@ -25,18 +32,35 @@
     "strictNullChecks": true,
     "resolveJsonModule": true,
     "paths": {
-      "@flaps/common": ["libs/common/src/index.ts"],
-      "@flaps/core": ["libs/core/src/index.ts"],
-      "@guillotinaweb/pastanaga-angular": ["libs/pastanaga-angular/projects/pastanaga-angular/src"],
-      "@nuclia/core": ["libs/sdk-core/src/index.ts"],
-      "@nuclia/prediction": ["libs/prediction/src/index.ts"],
-      "@nuclia/sistema": ["libs/sistema/src/index.ts"],
-      "@nuclia/widget": ["libs/search-widget/src/index.ts"]
+      "@flaps/common": [
+        "libs/common/src/index.ts"
+      ],
+      "@flaps/core": [
+        "libs/core/src/index.ts"
+      ],
+      "@guillotinaweb/pastanaga-angular": [
+        "src/../libs/pastanaga-angular/projects/pastanaga-angular/src"
+      ],
+      "@nuclia/core": [
+        "libs/sdk-core/src/index.ts"
+      ],
+      "@nuclia/prediction": [
+        "libs/prediction/src/index.ts"
+      ],
+      "@nuclia/sistema": [
+        "libs/sistema/src/index.ts"
+      ],
+      "@nuclia/widget": [
+        "libs/search-widget/src/index.ts"
+      ]
     }
   },
   "angularCompilerOptions": {
     "strictTemplates": false,
     "strictInjectionParameters": true
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": [
+    "node_modules",
+    "tmp"
+  ]
 }
