--- a/package.json
+++ b/package.json
@@ -147,7 +147,7 @@
     "es-dirname": "^0.1.0",
     "eslint": "8.42.0",
     "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-svelte3": "^4.0.0",
+    "eslint-plugin-svelte": "^2.30.0",
     "exitzero": "^1.0.1",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.4.3",
@@ -178,7 +178,9 @@
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.9.5",
-    "vite": "4.3.9"
+    "vite": "4.3.9",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^4.0.2"
   },
   "packageManager": "yarn@3.3.1"
 }
