update @sveltejs/vite-plugin-svelte to 1.4.0

--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "@rollup/plugin-terser": "^0.3.0",
     "@rollup/plugin-typescript": "^8.3.0",
     "@schematics/angular": "15.2.4",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.32",
+    "@sveltejs/vite-plugin-svelte": "^1.4.0",
     "@testing-library/svelte": "^3.2.2",
     "@tsconfig/svelte": "^4.0.1",
     "@types/core-js": "^2.5.4",
