--- a/package.json
+++ b/package.json
@@ -73,7 +73,6 @@
     "papaparse": "^5.4.1",
     "perfect-scrollbar": "^1.5.0",
     "posthog-js": "^1.57.2",
-    "prettier-plugin-svelte": "2.9.0",
     "protobufjs": "^6.11.3",
     "run-script-os": "^1.1.6",
     "rxjs": "7.8.0",
@@ -111,9 +110,9 @@
     "@rollup/plugin-terser": "^0.3.0",
     "@rollup/plugin-typescript": "^8.3.0",
     "@schematics/angular": "15.2.4",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.32",
-    "@testing-library/svelte": "^3.0.3",
-    "@tsconfig/svelte": "^2.0.1",
+    "@sveltejs/vite-plugin-svelte": "^1.4.0",
+    "@testing-library/svelte": "^3.2.2",
+    "@tsconfig/svelte": "^4.0.1",
     "@types/core-js": "^2.5.4",
     "@types/cors": "^2.8.13",
     "@types/d3": "^6.7.0",
@@ -122,7 +121,7 @@
     "@types/gapi.auth2": "^0.0.56",
     "@types/gapi.client.drive": "^3.0.13",
     "@types/jasmine": "4.0.3",
-    "@types/jest": "29.4.4",
+    "@types/jest": "29.5.2",
     "@types/jexl": "^2.2.0",
     "@types/latinize": "^0.2.15",
     "@types/lru-cache": "^5.1.0",
@@ -135,8 +134,8 @@
     "@types/uuid": "^8.3.0",
     "@types/z-schema": "^3.24.0",
     "@types/zone.js": "^0.5.12",
-    "@typescript-eslint/eslint-plugin": "5.57.0",
-    "@typescript-eslint/parser": "5.57.0",
+    "@typescript-eslint/eslint-plugin": "5.59.11",
+    "@typescript-eslint/parser": "5.59.11",
     "ajv-formats": "^2.1.1",
     "codelyzer": "6.0.2",
     "concurrently": "^8.0.1",
@@ -146,11 +145,11 @@
     "electron-builder": "23.6.0",
     "electron-notarize": "^1.2.1",
     "es-dirname": "^0.1.0",
-    "eslint": "8.15.0",
-    "eslint-config-prettier": "6.0.0",
-    "eslint-plugin-svelte3": "^3.2.1",
+    "eslint": "8.42.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-svelte": "^2.30.0",
     "exitzero": "^1.0.1",
-    "jest": "29.4.3",
+    "jest": "29.5.0",
     "jest-environment-jsdom": "29.4.3",
     "jest-preset-angular": "13.0.0",
     "ng-mocks": "^14.6.0",
@@ -162,7 +161,8 @@
     "postcss-import": "15.0.0",
     "postcss-preset-env": "7.8.0",
     "postcss-url": "10.1.3",
-    "prettier": "2.7.1",
+    "prettier": "2.8.8",
+    "prettier-plugin-svelte": "2.10.1",
     "replace-in-file": "^6.3.5",
     "rimraf": "^3.0.2",
     "rollup": "3",
@@ -171,15 +171,16 @@
     "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-local-resolve": "^1.0.7",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "svelte": "3.55.0",
-    "svelte-check": "^2.10.3",
+    "svelte": "3.59.1",
+    "svelte-check": "^3.4.3",
     "svelte-jester": "^2.3.2",
-    "svelte-preprocess": "^4.10.7",
+    "svelte-preprocess": "^5.0.4",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
-    "tslint": "6.1.3",
     "typescript": "~4.9.5",
-    "vite": "4.3.9"
+    "vite": "4.3.9",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^4.0.2"
   },
   "packageManager": "yarn@3.3.1"
 }
