--- a/libs/prediction/project.json
+++ b/libs/prediction/project.json
@@ -11,14 +11,14 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["libs/prediction/**/*.ts"]
       }
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/libs/prediction"],
       "options": {
         "jestConfig": "libs/prediction/jest.config.ts",
