--- a/libs/sdk-core/project.json
+++ b/libs/sdk-core/project.json
@@ -11,14 +11,14 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "options": {
         "lintFilePatterns": ["libs/sdk-core/**/*.ts"]
       },
       "outputs": ["{options.outputFile}"]
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/libs/sdk-core"],
       "options": {
         "jestConfig": "libs/sdk-core/jest.config.js",
