--- a/libs/search-widget/project.json
+++ b/libs/search-widget/project.json
@@ -5,7 +5,7 @@
   "projectType": "library",
   "targets": {
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "options": {
         "lintFilePatterns": ["libs/search-widget/**/*.{ts,svelte,spec.ts}"]
       }
@@ -27,7 +27,7 @@
       }
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/libs/search-widget"],
       "options": {
         "jestConfig": "libs/search-widget/jest.config.js",
