--- a/apps/desktop/electron/project.json
+++ b/apps/desktop/electron/project.json
@@ -51,14 +51,14 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["apps/desktop/electron/**/*.ts"]
       }
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/apps/desktop/electron"],
       "options": {
         "jestConfig": "apps/desktop/electron/jest.config.js",
