--- a/apps/search-widget-demo/project.json
+++ b/apps/search-widget-demo/project.json
@@ -29,7 +29,7 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "options": {
         "lintFilePatterns": ["apps/search-widget-demo/**/*.{ts,svelte,spec.ts}"]
       }
@@ -42,7 +42,7 @@
       }
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/apps/search-widget-demo"],
       "options": {
         "jestConfig": "apps/search-widget-demo/jest.config.js",
