--- a/libs/chrome-ext/project.json
+++ b/libs/chrome-ext/project.json
@@ -19,7 +19,7 @@
       }
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/libs/chrome-ext"],
       "options": {
         "jestConfig": "libs/chrome-ext/jest.config.ts",
