--- a/package.json
+++ b/package.json
@@ -20,21 +20,20 @@
     "sdk-build:default": "rimraf ./dist/sdk-core && cd ./libs/sdk-core && rollup -c && cd ../..",
     "postsdk-build:default": "yarn sdk-build-node",
     "sdk-build-node": "rimraf ./dist/sdk-core-node && cd ./libs/sdk-core/node && rollup -c && cd ../..",
-    "desktop-server-dev": "concurrently \"cd apps/desktop/electron && npx tsc -p ./tsconfig.server.json --watch\" \"nodemon -q dist/service/apps/desktop/electron/src/service/server.js\"",
-    "postinstall": "ngcc --properties es2020 browser module main"
+    "desktop-server-dev": "concurrently \"cd apps/desktop/electron && npx tsc -p ./tsconfig.server.json --watch\" \"nodemon -q dist/service/apps/desktop/electron/src/service/server.js\""
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "15.2.5",
-    "@angular/cdk": "^15.2.6",
-    "@angular/common": "15.2.5",
-    "@angular/compiler": "15.2.5",
-    "@angular/core": "^15.2.6",
-    "@angular/forms": "15.2.5",
-    "@angular/platform-browser": "15.2.5",
-    "@angular/platform-browser-dynamic": "15.2.5",
-    "@angular/router": "15.2.5",
-    "@angular/service-worker": "15.2.5",
+    "@angular/animations": "16.1.2",
+    "@angular/cdk": "16.1.2",
+    "@angular/common": "16.1.2",
+    "@angular/compiler": "16.1.2",
+    "@angular/core": "16.1.2",
+    "@angular/forms": "16.1.2",
+    "@angular/platform-browser": "16.1.2",
+    "@angular/platform-browser-dynamic": "16.1.2",
+    "@angular/router": "16.1.2",
+    "@angular/service-worker": "16.1.2",
     "@aws-sdk/client-s3": "^3.348.0",
     "@aws-sdk/s3-request-presigner": "^3.190.0",
     "@ng-web-apis/common": "^2.1.0",
@@ -81,33 +80,32 @@
     "tus-js-client": "^2.3.1",
     "uuid": "^7.0.3",
     "z-schema": "^4.2.2",
-    "zone.js": "0.12.0"
+    "zone.js": "0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.2.4",
-    "@angular-devkit/core": "15.2.4",
-    "@angular-devkit/schematics": "15.2.4",
-    "@angular-eslint/eslint-plugin": "15.0.0",
-    "@angular-eslint/eslint-plugin-template": "15.0.0",
-    "@angular-eslint/schematics": "^15.2.1",
-    "@angular-eslint/template-parser": "15.0.0",
-    "@angular/cli": "^15.2.5",
-    "@angular/compiler-cli": "15.2.5",
-    "@angular/language-service": "15.2.5",
-    "@biesbjerg/ngx-translate-extract": "^7.0.4",
-    "@nrwl/angular": "15.9.2",
-    "@nrwl/cli": "15.9.2",
-    "@nrwl/eslint-plugin-nx": "15.9.2",
-    "@nrwl/jest": "15.9.2",
-    "@nrwl/js": "15.9.2",
-    "@nrwl/linter": "15.9.2",
-    "@nrwl/node": "15.9.2",
-    "@nrwl/workspace": "15.9.2",
+    "@angular-devkit/build-angular": "16.1.1",
+    "@angular-devkit/core": "16.1.1",
+    "@angular-devkit/schematics": "16.1.1",
+    "@angular-eslint/eslint-plugin": "16.0.3",
+    "@angular-eslint/eslint-plugin-template": "16.0.3",
+    "@angular-eslint/schematics": "16.0.3",
+    "@angular-eslint/template-parser": "16.0.3",
+    "@angular/cli": "~16.1.0",
+    "@angular/compiler-cli": "16.1.2",
+    "@angular/language-service": "16.1.2",
+    "@biesbjerg/ngx-translate-extract": "7.0.4",
+    "@nx/angular": "16.4.0",
+    "@nx/eslint-plugin": "16.4.0",
+    "@nx/jest": "16.4.0",
+    "@nx/js": "16.4.0",
+    "@nx/linter": "16.4.0",
+    "@nx/node": "16.4.0",
+    "@nx/workspace": "16.4.0",
     "@nxext/svelte": "15.7.0",
     "@rollup/plugin-inject": "^4.0.4",
     "@rollup/plugin-terser": "^0.3.0",
     "@rollup/plugin-typescript": "^8.3.0",
-    "@schematics/angular": "15.2.4",
+    "@schematics/angular": "16.1.1",
     "@sveltejs/vite-plugin-svelte": "^1.4.0",
     "@testing-library/svelte": "^3.2.2",
     "@tsconfig/svelte": "^4.0.1",
@@ -132,8 +130,8 @@
     "@types/uuid": "^8.3.0",
     "@types/z-schema": "^3.24.0",
     "@types/zone.js": "^0.5.12",
-    "@typescript-eslint/eslint-plugin": "5.59.11",
-    "@typescript-eslint/parser": "5.59.11",
+    "@typescript-eslint/eslint-plugin": "5.60.0",
+    "@typescript-eslint/parser": "5.60.0",
     "ajv-formats": "^2.1.1",
     "codelyzer": "6.0.2",
     "concurrently": "^8.0.1",
@@ -149,12 +147,12 @@
     "exitzero": "^1.0.1",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.4.3",
-    "jest-preset-angular": "13.0.0",
-    "ng-mocks": "^14.6.0",
-    "ng-packagr": "15.2.2",
+    "jest-preset-angular": "13.1.1",
+    "ng-mocks": "14.11.0",
+    "ng-packagr": "16.1.0",
     "nodemon": "^2.0.22",
-    "nx": "15.9.2",
-    "nx-electron": "15.0.0-alpha.0",
+    "nx": "16.4.0",
+    "nx-electron": "^16.0.0-alpha.1",
     "postcss": "^8.4.16",
     "postcss-import": "15.0.0",
     "postcss-preset-env": "7.8.0",
@@ -172,9 +170,9 @@
     "svelte-check": "^3.4.3",
     "svelte-jester": "^2.3.2",
     "svelte-preprocess": "^5.0.4",
-    "ts-jest": "29.0.5",
+    "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.5",
+    "typescript": "5.1.3",
     "vite": "4.3.9",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2"
