--- a/charts/app/values.yaml
+++ b/charts/app/values.yaml
@@ -32,3 +32,7 @@ virtualService:
   enabled: false
   gateway: XXX
   host: XXX
+
+# annotations:
+#   what: "add annotations"
+#   where: "in the pods"
