--- a/charts/manager/templates/manager.deploy.yaml
+++ b/charts/manager/templates/manager.deploy.yaml
@@ -21,6 +21,7 @@ spec:
   {{- if hasKey .Values "annotations" }}
       annotations:
 {{ toYaml .Values.annotations | indent 8 }}
+  {{- end }}
       name: {{ .Release.Name }}
       labels:
         app: {{ .Release.Name }}
