--- a/apps/desktop/src/environments_config/production/app-config.json
+++ b/apps/desktop/src/environments_config/production/app-config.json
@@ -7,15 +7,8 @@
     "apiPath": "/api",
     "siteKey": "6Ld-y4QcAAAAAD6rp7xj0PMEpGcflsJEPJ9D3oyG",
     "analytics": "G-QLPEN1JVZC",
-    "sentry_environment": "prod",
-    "sentry_url": "https://76bfd6392db6450a8f3174877b9bac9d@o393980.ingest.sentry.io/5425081",
-    "sentry_backend": "nuclia.cloud",
-    "posthog_host": "https://track.nuclia.cloud",
-    "posthog_key": "phc_cdrUDTLT62r0EXEZzZvhkSCkksGttBiWkBWoPpxbomA",
-    "saml_login": true
-  },
-  "stashify": {
-    "editor": "",
-    "email_domain": ""
+    "sentry_environment": "desktop-prod",
+    "sentry_url": "__SENTRY_URL__",
+    "sentry_backend": "nuclia.cloud"
   }
 }
