in contributor app, the user is always admin

--- a/apps/contributor/src/environments_config/production/app-config.json
+++ b/apps/contributor/src/environments_config/production/app-config.json
@@ -7,9 +7,6 @@
     "siteKey": "",
     "sentry_environment": "prod",
     "sentry_url": "https://76bfd6392db6450a8f3174877b9bac9d@o393980.ingest.sentry.io/5425081",
-    "sentry_backend": "https://nuclia.cloud/api",
-    "posthog_host": "https://track.nuclia.cloud",
-    "posthog_key": "phc_cdrUDTLT62r0EXEZzZvhkSCkksGttBiWkBWoPpxbomA",
-    "saml_login": false
+    "sentry_backend": "https://nuclia.cloud/api"
   }
 }
