Fix sentry url (bad url breaks desktop on Windows)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -267,6 +267,7 @@ jobs:
       - name: Build desktop app
         run: |-
           npx replace-in-file __SENTRY_URL__ ${{ secrets.SENTRY_URL }} ./apps/desktop/electron/src/environments/environment.prod.ts
+          npx replace-in-file __SENTRY_URL__ ${{ secrets.SENTRY_URL }} ./apps/desktop/src/environments_config/production/app-config.json
           npx replace-in-file __SENTRY_RELEASE__ ${{ github.sha }} ./apps/desktop/electron/src/environments/environment.prod.ts
           npx nx build desktop --configuration production
           npx replace-in-file __VERSION__ ${{ github.sha }} ./dist/apps/desktop/assets/deployment/app-config.json
